--- a/threejs_LAB/index.html
+++ b/threejs_LAB/index.html
@@ -10,6 +10,7 @@
 	<body>
         <div id = "webgl"></div> 
 		<script src="./lib/three.js"></script>
+		<script src="./lib/OrbitControls.js"></script>
 		<script src="./lib/dat.gui.js"></script>
 		<script src="./js/main.js"></script>
 	</body>
