done lighting & animation

--- a/threejs_LAB/index.html
+++ b/threejs_LAB/index.html
@@ -10,7 +10,9 @@
 	<body>
         <div id = "webgl"></div> 
 		<script src="./lib/three.js"></script>
+		<script src="./lib/tween.umd.js"></script>
 		<script src="./lib/OrbitControls.js"></script>
+		<script src="./lib/perlin.js"></script>
 		<script src="./lib/dat.gui.js"></script>
 		<script src="./js/main.js"></script>
 	</body>
