--- a/final_project/index.html
+++ b/final_project/index.html
@@ -24,8 +24,9 @@
 				</button>
 			</div>
 			<div class="p-4 pt-5">
-				<h1><a href="index.html" class="logo">TEAM A</a></h1>
+				<h1><a href="index.html" class="logo">MENU</a></h1>
 				<ul class="list-unstyled components mb-5">
+					<!-- Geometry -->
 					<li>
 						<a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false"
 							class="dropdown-toggle">Geometry</a>
@@ -62,6 +63,7 @@
 							</li>
 						</ul>
 					</li>
+					<!-- Surface -->
 					<li>
 						<a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false"
 							class="dropdown-toggle">Surface</a>
@@ -82,6 +84,7 @@
 							</li>
 						</ul>
 					</li>
+					<!-- Light -->
 					<li>
 						<a href="#lightSubmenu" data-toggle="collapse" aria-expanded="false"
 							class="dropdown-toggle">Light</a>
@@ -94,6 +97,7 @@
 							</li>
 						</ul>
 					</li>
+					<!-- Animation -->
 					<li>
 						<a href="#animationSubmenu" data-toggle="collapse" aria-expanded="false"
 							class="dropdown-toggle">Animation</a>
@@ -116,6 +120,9 @@
 								<a href="#" onclick="ResetAnimation()">Reset</a>
 							</li>
 						</ul>
+					</li>
+					<li>
+						<a href="#"> About </a>
 					</li>
 				</ul>
 
