add Model menu to side-nav

--- a/final_project/index.html
+++ b/final_project/index.html
@@ -97,6 +97,23 @@
 							</li>
 						</ul>
 					</li>
+					<!-- Model -->
+					<li>
+						<a href="#modelSubmenu" data-toggle="collapse" aria-expanded="false"
+							class="dropdown-toggle">Model</a>
+						<ul class="collapse list-unstyled" id="modelSubmenu">
+							<li>
+								<a href="#" onclick="">Model 1</a>
+							</li>
+							<li>
+								<a href="#" onclick="">Model 2</a>
+							</li>
+							<li>
+								<a href="#" onclick="">Model 3</a>
+							</li>
+
+						</ul>
+					</li>
 					<!-- Animation -->
 					<li>
 						<a href="#animationSubmenu" data-toggle="collapse" aria-expanded="false"
@@ -145,10 +162,6 @@
 									<li>Nguyen Hong Quang - 18521297 </li>
 								</ul>
 							</div>
-							<!-- <div class="modal-footer">
-								<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-								<button type="button" class="btn btn-primary">Save changes</button>
-							</div> -->
 						</div>
 					</div>
 				</div>
@@ -294,6 +307,7 @@
 		function Uploadimage() {
 			document.getElementById("texture").click();
 		};
+		// TODO Add upload model
 	</script>
 </body>
 
