--- a/final_project/index.html
+++ b/final_project/index.html
@@ -24,7 +24,21 @@
 				</button>
 			</div>
 			<div class="p-4 pt-5">
-				<h1><a href="index.html" class="logo">MENU</a></h1>
+				<h1>
+					<svg height="60" width="60" fill="white" stroke-linecap="square" stroke-miterlimit="10" version="1.1"
+						viewBox="0 0 226.77 226.77" xmlns="http://www.w3.org/2000/svg">
+						<g transform="translate(8.964 4.2527)" fill-rule="evenodd" stroke="#000" stroke-linecap="butt"
+							stroke-linejoin="round" stroke-width="4">
+							<path d="m63.02 200.61-43.213-174.94 173.23 49.874z" />
+							<path d="m106.39 50.612 21.591 87.496-86.567-24.945z" />
+							<path d="m84.91 125.03-10.724-43.465 43.008 12.346z" />
+							<path d="m63.458 38.153 10.724 43.465-43.008-12.346z" />
+							<path d="m149.47 62.93 10.724 43.465-43.008-12.346z" />
+							<path d="m84.915 125.06 10.724 43.465-43.008-12.346z" />
+						</g>
+					</svg>
+					<a href="index.html" class="logo">MENU</a>
+				</h1>
 				<ul class="list-unstyled components mb-5">
 					<!-- Geometry -->
 					<li>
