add dat.GUI library; add light control; need to reposition of light control

--- a/final_project/index.html
+++ b/final_project/index.html
@@ -104,7 +104,7 @@
 							class="dropdown-toggle">Light</a>
 						<ul class="collapse list-unstyled" id="lightSubmenu">
 							<li>
-								<a href="#" onclick="SetPointLight()">Light</a>
+								<a href="#" onclick="SetPointLight()">Add Light</a>
 							</li>
 							<li>
 								<a href="#" onclick="RemoveLight()">Remove Light</a>
@@ -263,6 +263,7 @@
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/main.js"></script>
+	<script src="js/dat.gui.js"></script>
 	<script type="module" src="./index.js"></script>
 
 	<script>
