light control panel reposition done, styling still ugly; change animation name in animation menu

--- a/final_project/index.html
+++ b/final_project/index.html
@@ -135,11 +135,11 @@
 						<ul class="collapse list-unstyled" id="animationSubmenu">
 							<li class="custom-control custom-checkbox">
 								<input type="checkbox" class="custom-control-input" id="animation1">
-								<label class="custom-control-label" for="animation1">#1</label>
+								<label class="custom-control-label" for="animation1">X-Rotation</label>
 							</li>
 							<li class="custom-control custom-checkbox">
 								<input type="checkbox" class="custom-control-input" id="animation2">
-								<label class="custom-control-label" for="animation2">#2</label>
+								<label class="custom-control-label" for="animation2">Y-Rotation</label>
 							</li>
 							<li>
 								<a href="#" onclick="Animation3()">Animation 3</a>
@@ -254,7 +254,7 @@
 						</div>
 					</div>
 					<!-- TODO: Add dat.GUI here -->
-					<div>
+					<div class="moveGUI">
 
 					</div>
 
