update Animation menu & rename; didn't fix styling dat.gui

--- a/final_project/index.html
+++ b/final_project/index.html
@@ -133,6 +133,7 @@
 						<a href="#animationSubmenu" data-toggle="collapse" aria-expanded="false"
 							class="dropdown-toggle">Animation</a>
 						<ul class="collapse list-unstyled" id="animationSubmenu">
+							<label style="font-size: 14px;color: #FFFFFFCC;">Axis Rotation</label>  
 							<li class="custom-control custom-checkbox">
 								<input type="checkbox" class="custom-control-input" id="animation1">
 								<label class="custom-control-label" for="animation1">X-Rotation</label>
@@ -142,10 +143,12 @@
 								<label class="custom-control-label" for="animation2">Y-Rotation</label>
 							</li>
 							<li>
-								<a href="#" onclick="Animation3()">Animation 3</a>
+								<!-- Animation 3 -->
+								<a href="#" onclick="Animation3()">Animation 1</a>
 							</li>
 							<li>
-								<a href="#" onclick="Animation4()">Animation 4</a>
+								<!-- Animation 4 -->
+								<a href="#" onclick="Animation4()">Animation 2</a>
 							</li>
 							<li>
 								<a href="#" onclick="ResetAnimation()">Reset</a>
@@ -175,6 +178,7 @@
 									<li>Nguyen Thanh Vinh - 18521654 </li>
 									<li>Nguyen Hong Quang - 18521297 </li>
 								</ul>
+								<h6> Project can be found <a href="https://github.com/dxv2k/CS105_Computer_Graphics">here</a></h6>
 							</div>
 						</div>
 					</div>
