--- a/final_project/index.html
+++ b/final_project/index.html
@@ -25,8 +25,8 @@
 			</div>
 			<div class="p-4 pt-5">
 				<h1>
-					<svg height="60" width="60" fill="white" stroke-linecap="square" stroke-miterlimit="10" version="1.1"
-						viewBox="0 0 226.77 226.77" xmlns="http://www.w3.org/2000/svg">
+					<svg height="60" width="60" fill="white" stroke-linecap="square" stroke-miterlimit="10"
+						version="1.1" viewBox="0 0 226.77 226.77" xmlns="http://www.w3.org/2000/svg">
 						<g transform="translate(8.964 4.2527)" fill-rule="evenodd" stroke="#000" stroke-linecap="butt"
 							stroke-linejoin="round" stroke-width="4">
 							<path d="m63.02 200.61-43.213-174.94 173.23 49.874z" />
@@ -134,7 +134,7 @@
 							class="dropdown-toggle">Animation</a>
 						<ul class="collapse list-unstyled" id="animationSubmenu">
 							<!-- Axis Rotation -->
-							<label style="font-size: 14px;color: #FFFFFFCC;">Axis Rotation</label>  
+							<label style="font-size: 14px;color: #FFFFFFCC;">Axis Rotation</label>
 							<li class="custom-control custom-checkbox">
 								<input type="checkbox" class="custom-control-input" id="x_rotate">
 								<label class="custom-control-label" for="x_rotate">X-Rotation</label>
@@ -179,7 +179,8 @@
 									<li>Nguyen Thanh Vinh - 18521654 </li>
 									<li>Nguyen Hong Quang - 18521297 </li>
 								</ul>
-								<h6> Project can be found <a href="https://github.com/dxv2k/CS105_Computer_Graphics">here</a></h6>
+								<h6> Project can be found <a
+										href="https://github.com/dxv2k/CS105_Computer_Graphics">here</a></h6>
 							</div>
 						</div>
 					</div>
@@ -255,7 +256,17 @@
 										value="1000">
 								</div>
 							</div>
-
+							<!-- Remove mesh button -->
+							<button class="btn trash" 
+									href="#" onclick="RemoveMesh()">
+								<svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" fill="currentColor"
+									class="bi bi-trash" viewBox="0 0 16 16">
+									<path
+										d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
+									<path fill-rule="evenodd"
+										d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
+								</svg>
+							</button>
 						</div>
 					</div>
 					<!-- TODO: Add dat.GUI here -->
@@ -264,9 +275,10 @@
 					</div>
 
 				</div>
-
 			</div>
+
 		</div>
+	</div>
 	</div>
 
 	<script src="js/jquery.min.js"></script>
