Added 3D model features & tested working properly; working on select models function

--- a/final_project/index.html
+++ b/final_project/index.html
@@ -117,7 +117,7 @@
 							class="dropdown-toggle">Model</a>
 						<ul class="collapse list-unstyled" id="modelSubmenu">
 							<li>
-								<a href="#" onclick="">Model 1</a>
+								<a href="#" onclick="LoadModel()">Car </a>
 							</li>
 							<li>
 								<a href="#" onclick="">Model 2</a>
