--- a/final_project/index.html
+++ b/final_project/index.html
@@ -117,13 +117,13 @@
 							class="dropdown-toggle">Model</a>
 						<ul class="collapse list-unstyled" id="modelSubmenu">
 							<li>
-								<a href="#" onclick="LoadModel()">Car </a>
+								<a href="#" onclick="ModelSelect(1)"> Car </a>
 							</li>
 							<li>
-								<a href="#" onclick="">Model 2</a>
+								<a href="#" onclick="ModelSelect(2)"> Drone </a>
 							</li>
 							<li>
-								<a href="#" onclick="">Model 3</a>
+								<a href="#" onclick="ModelSelect(3)">Tank</a>
 							</li>
 
 						</ul>
