unable to remove 3D object (GLTFojbect)

--- a/final_project/index.html
+++ b/final_project/index.html
@@ -258,7 +258,8 @@
 							</div>
 							<!-- Remove mesh button -->
 							<button class="btn trash" 
-									href="#" onclick="RemoveMesh()">
+									href="#" onclick="RemoveAll()">
+								<a> Remove all </a>
 								<svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" fill="currentColor"
 									class="bi bi-trash" viewBox="0 0 16 16">
 									<path
