Add PointLight & Directional Light; bug with dat.GUI when switch to different sources of light

--- a/final_project/index.html
+++ b/final_project/index.html
@@ -104,7 +104,10 @@
 							class="dropdown-toggle">Light</a>
 						<ul class="collapse list-unstyled" id="lightSubmenu">
 							<li>
-								<a href="#" onclick="SetPointLight()">Add Light</a>
+								<a href="#" onclick="SetPointLight(1)">Point Light</a>
+							</li>
+							<li>
+								<a href="#" onclick="SetPointLight(2)">Directional Light</a>
 							</li>
 							<li>
 								<a href="#" onclick="RemoveLight()">Remove Light</a>
